# routes/api.php
@@ -11,7 +11,9 @@ use App\Http\Controllers\Api\V1\TenantController;
 use App\Http\Controllers\Api\V1\TenantMemberController;
 use App\Http\Controllers\Api\V1\WebhookController;
 use App\Http\Controllers\Api\V1\AuthController;
-use App\Http\Controllers\VerifyEmailController;
+use App\Http\Controllers\Api\V1\TenantInvitationController;
+use App\Http\Controllers\Api\V1\VerifyEmailController;
+use App\Models\TenantInvitation;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -30,7 +32,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-
+// Auth related endpoints
 Route::prefix('v1')->group(function () {
 
     // Public endpoints
@@ -40,10 +42,10 @@ Route::prefix('v1')->group(function () {
     Route::post('reset-password', [AuthController::class, 'resetPassword']);   // optional
     Route::get('email/verify/{id}/{hash}', [VerifyEmailController::class, 'verify'])->middleware('throttle:5,1')
         ->name('verification.verify');
-
-    // Resend verification email
     Route::post('email/resend', [VerifyEmailController::class, 'resend'])->middleware('throttle:5,1')
         ->name('verification.resend');
+    Route::get('/tenants/invitations/accept/{invitation}/{token}', [TenantInvitationController::class, 'accept'])
+        ->middleware('throttle:5,1')->name('tenant-invitations.accept');
 
     // Protected endpoints (require token)
     Route::middleware('auth:sanctum')->group(function () {
@@ -82,5 +84,7 @@ Route::prefix('v1')->middleware(['auth:sanctum'])->group(function () {
 
     // Tenant Membership
     Route::apiResource('tenants', TenantController::class);
+    Route::post('/tenants/switch', [TenantController::class, 'switchTenant']);
     Route::apiResource('tenants.members', TenantMemberController::class);
+    Route::post('/tenants/invite', [TenantInvitationController::class, 'send'])->middleware('throttle:5,1');
 });
